[gd_scene load_steps=12 format=3 uid="uid://b4oxwpb70gs0s"]

[ext_resource type="Script" path="res://laser_beam.gd" id="1_cur3a"]
[ext_resource type="Texture2D" uid="uid://e3odg1g6ewlq" path="res://Assets/white_glowing_circle.png" id="1_ss63e"]

[sub_resource type="Gradient" id="Gradient_bo5ml"]
offsets = PackedFloat32Array(0.590164, 1)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_17x3w"]
gradient = SubResource("Gradient_bo5ml")

[sub_resource type="Curve" id="Curve_8jp04"]
_data = [Vector2(0.5, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_sueto"]
curve = SubResource("Curve_8jp04")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_l1gp8"]
particle_flag_disable_z = true
initial_velocity_min = 100.0
initial_velocity_max = 100.0
gravity = Vector3(0, 0, 0)
scale_min = 0.5
scale_curve = SubResource("CurveTexture_sueto")
color_ramp = SubResource("GradientTexture1D_17x3w")

[sub_resource type="Curve" id="Curve_irof0"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.5, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_fjc0o"]
width = 2048
curve = SubResource("Curve_irof0")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_j6sq0"]
lifetime_randomness = 1.0
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(60, 20, 1)
initial_velocity_min = -100.0
initial_velocity_max = -100.0
gravity = Vector3(0, 0, 0)
tangential_accel_min = 100.0
tangential_accel_max = 100.0
scale_min = 0.3
scale_max = 0.3
scale_curve = SubResource("CurveTexture_fjc0o")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_8dre5"]
particle_flag_disable_z = true
spread = 80.0
initial_velocity_min = 200.0
initial_velocity_max = 200.0
gravity = Vector3(0, 0, 0)
scale_min = 0.5
scale_curve = SubResource("CurveTexture_sueto")
color_ramp = SubResource("GradientTexture1D_17x3w")

[node name="LaserBeam" type="RayCast2D"]
target_position = Vector2(0, 0)
script = ExtResource("1_cur3a")
castSpeed = 7000

[node name="FillLine" type="Line2D" parent="."]
unique_name_in_owner = true
modulate = Color(0.5, 0.8, 2, 1)
points = PackedVector2Array(-1, -3, 435, -3)
width = 30.0
default_color = Color(0.319196, 0.623089, 1, 1)
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="CastingPraticles" type="GPUParticles2D" parent="."]
unique_name_in_owner = true
modulate = Color(0.5, 0.8, 2, 1)
emitting = false
process_material = SubResource("ParticleProcessMaterial_l1gp8")
texture = ExtResource("1_ss63e")

[node name="BeamParticles" type="GPUParticles2D" parent="."]
unique_name_in_owner = true
modulate = Color(0.5, 0.8, 2, 1)
emitting = false
amount = 100
process_material = SubResource("ParticleProcessMaterial_j6sq0")
texture = ExtResource("1_ss63e")
visibility_rect = Rect2(-2500, -2500, 5000, 5000)

[node name="CollisionParticles" type="GPUParticles2D" parent="."]
unique_name_in_owner = true
modulate = Color(0.5, 0.8, 2, 1)
emitting = false
amount = 16
process_material = SubResource("ParticleProcessMaterial_8dre5")
texture = ExtResource("1_ss63e")
lifetime = 0.3
